--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -88,3 +88,32 @@ nlu:
     - tell me the time
     - got the time
     - got the time?
+- intent: ask_me_anything
+  examples: |
+    - ask me anything
+    - would you like to ask me something
+    - feel free to ask me about things
+    - want to ask me something?
+- intent: repeat_shirt_size
+  examples: |
+    - what is my shirt size
+    - tell me my shirt size
+    - do you know my shirt size
+    - repeat my shirt size
+    - repeat shirt size
+    - please repeat my shirt size
+    - repeat repeat repeat size
+- intent: give_shirt_size
+  examples: |
+    - i want a [large](shirt_size) shirt
+    - [medium](shirt_size) size
+    - give me a [small](shirt_size) tshirt
+    - [small](shirt_size)
+    - [medium](shirt_size)
+    - [large](shirt_size)
+    - i'd prefer [medium](shirt_size) size
+    - gimme gimme gimme [small](shirt_size) tshirt
+    - give shirt size
+    - i want a [large](shirt_size) shirt please
+    - i want to give you my shirt
+    - [medium](shirt_size)
