--- a/data/rules.yml
+++ b/data/rules.yml
@@ -11,3 +11,20 @@ rules:
   steps:
   - intent: bot_challenge
   - action: utter_iamabot
+
+- rule: Activate shirt size form
+  steps:
+    - intent: ask_me_anything
+    - action: shirt_size_form
+    - active_loop: shirt_size_form
+
+- rule: Submit form
+  condition:
+  - active_loop: shirt_size_form
+  steps:
+    - action: shirt_size_form
+    - active_loop: null
+    - slot_was_set:
+      - requested_slot: null
+    - action: utter_remember
+    - action: action_say_shirt_size
