--- a/domain.yml
+++ b/domain.yml
@@ -1,16 +1,35 @@
 version: '3.1'
 intents:
 - affirm
+- ask_me_anything
 - bot_challenge
 - deny
+- give_shirt_size
 - give_time
 - goodbye
 - greet
 - mood_great
 - mood_unhappy
+- repeat_shirt_size
+entities:
+- shirt_size
+slots:
+  shirt_size:
+    type: text
+    influence_conversation: true
+    mappings:
+    - type: from_entity
+      entity: shirt_size
+      conditions:
+      - active_loop: shirt_size_form
+forms:
+  shirt_size_form:
+    required_slots:
+    - shirt_size
 actions:
+- action_say_shirt_size
+- utter_remember
 - utter_greet
-- action_show_time
 responses:
   utter_greet:
   - text: Hey! How are you?
@@ -25,6 +44,10 @@ responses:
   - text: Bye
   utter_iamabot:
   - text: I am a bot, powered by Rasa.
+  utter_ask_shirt_size:
+  - text: do u know ur shirt size?
+  utter_remember:
+  - text: terimah kasih. I'll remember ur size.
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
