--- a/domain.yml
+++ b/domain.yml
@@ -1,53 +1,56 @@
 version: '3.1'
 intents:
-- affirm
-- ask_me_anything
-- bot_challenge
-- deny
-- give_shirt_size
-- give_time
-- goodbye
-- greet
-- mood_great
-- mood_unhappy
-- repeat_shirt_size
+  - affirm
+  - ask_me_anything
+  - bot_challenge
+  - deny
+  - give_shirt_size
+  - give_time
+  - goodbye
+  - greet
+  - mood_great
+  - mood_unhappy
+  - repeat_shirt_size
 entities:
-- shirt_size
+  - shirt_size
 slots:
   shirt_size:
     type: text
     influence_conversation: true
     mappings:
-    - type: from_entity
-      entity: shirt_size
-      conditions:
-      - active_loop: shirt_size_form
+      - type: from_entity
+        entity: shirt_size
+        conditions:
+          - active_loop: shirt_size_form
 forms:
   shirt_size_form:
     required_slots:
-    - shirt_size
+      - shirt_size
 actions:
-- action_say_shirt_size
-- utter_remember
-- utter_greet
+  - action_say_shirt_size
+  - utter_remember
+  - utter_greet
+  - action_default_fallback
 responses:
   utter_greet:
-  - text: Hey! How are you?
+    - text: Hey! How are you?
   utter_cheer_up:
-  - text: 'Here is something to cheer you up:'
-    image: https://i.imgur.com/nGF1K8f.jpg
+    - text: 'Here is something to cheer you up:'
+      image: https://i.imgur.com/nGF1K8f.jpg
   utter_did_that_help:
-  - text: Did that help you?
+    - text: Did that help you?
   utter_happy:
-  - text: Great, carry on!
+    - text: Great, carry on!
   utter_goodbye:
-  - text: Bye
+    - text: Bye
   utter_iamabot:
-  - text: I am a bot, powered by Rasa.
+    - text: I am a bot, powered by Rasa.
   utter_ask_shirt_size:
-  - text: do u know ur shirt size?
+    - text: do u know ur shirt size?
   utter_remember:
-  - text: terimah kasih. I'll remember ur size.
+    - text: terimah kasih. I'll remember ur size.
+  utter_message:
+    - text: '{message}'
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
