--- a/credentials.yml
+++ b/credentials.yml
@@ -6,6 +6,10 @@ rest:
 #  # you don't need to provide anything here - this channel doesn't
 #  # require any credentials
 
+callback:
+  # URL to which Rasa Open Source will send the bot responses
+  # See https://rasa.com/docs/rasa/connectors/your-own-website#callbackinput
+  url: 'http://localhost:5034/bot'
 
 #facebook:
 #  verify: "<verify>"
@@ -30,4 +34,4 @@ rest:
 # This entry is needed if you are using Rasa Enterprise. The entry represents credentials
 # for the Rasa Enterprise "channel", i.e. Talk to your bot and Share with guest testers.
 rasa:
-  url: "http://localhost:5002/api"
+  url: 'http://localhost:5002/api'
