--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -116,3 +116,36 @@ nlu:
     - give shirt size
     - i want a [large](shirt_size) shirt please
     - i want to give you my shirt
+- intent: ask_remind_call
+  examples: |
+    - remind me to call John
+    - remind me to call Lis
+    - remind me to call Albert
+    - remind me to call Susan
+    - later I have to call Alan
+    - later I have to call Jessie
+    - later I have to call Alex
+    - Please, remind me to call Vova
+    - please remind me to call Tanja
+    - I must not forget to call Santa
+    - I must not forget to call Daksh
+    - I must not forget to call Juste
+- intent: ask_id
+  examples: |
+    - what's the conversation id?
+    - id
+    - What is the ID of this conversation?
+    - How do I send a POST request to this conversation?
+- intent: ask_forget_reminders
+  examples: |
+    - forget about it
+    - don't remind me!
+    - Forget about the reminder
+    - do not remind me
+    - cancel the reminder
+    - cancel all reminders please
+    - Forget reminding me
+    - Forget reminding me!
+- intent: EXTERNAL_dry_plant
+  examples: |
+    - EXTERNAL: EXTERNAL_dry_plant
