--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,30 +1,51 @@
-version: "3.1"
+version: '3.1'
 
 rules:
+  - rule: remind call
+    steps:
+      - intent: ask_remind_call
+      - action: action_set_reminder
+  - rule: forget reminder
+    steps:
+      - intent: ask_forget_reminders
+      - action: action_forget_reminders
 
-- rule: Say goodbye anytime the user says goodbye
-  steps:
-  - intent: goodbye
-  - action: utter_goodbye
+  - rule: convo action_tell_id
+    steps:
+      - intent: ask_id
+      - action: action_tell_id
+  - rule: warn dry plant
+    steps:
+      - intent: EXTERNAL_dry_plant
+      - action: action_warn_dry
+  - rule: react to reminder
+    steps:
+      - intent: EXTERNAL_reminder
+      - action: action_react_to_reminder
 
-- rule: Say 'I am a bot' anytime the user challenges
-  steps:
-  - intent: bot_challenge
-  - action: utter_iamabot
+  - rule: Say goodbye anytime the user says goodbye
+    steps:
+      - intent: goodbye
+      - action: utter_goodbye
 
-- rule: Activate shirt size form
-  steps:
-    - intent: ask_me_anything
-    - action: shirt_size_form
-    - active_loop: shirt_size_form
+  - rule: Say 'I am a bot' anytime the user challenges
+    steps:
+      - intent: bot_challenge
+      - action: utter_iamabot
 
-- rule: Submit form
-  condition:
-  - active_loop: shirt_size_form
-  steps:
-    - action: shirt_size_form
-    - active_loop: null
-    - slot_was_set:
-      - requested_slot: null
-    - action: utter_remember
-    - action: action_say_shirt_size
+  - rule: Activate shirt size form
+    steps:
+      - intent: ask_me_anything
+      - action: shirt_size_form
+      - active_loop: shirt_size_form
+
+  - rule: Submit form
+    condition:
+      - active_loop: shirt_size_form
+    steps:
+      - action: shirt_size_form
+      - active_loop: null
+      - slot_was_set:
+          - requested_slot: null
+      - action: utter_remember
+      - action: action_say_shirt_size
