--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,56 +1,37 @@
-version: "3.1"
+version: '3.1'
 
 stories:
+  - story: Happy path
+    steps:
+      - intent: greet
+      - intent: ask_remind_call
+      - action: action_set_reminder
 
-- story: interactive_story_1
-  steps:
-  - intent: ask_me_anything
-  - action: shirt_size_form
-  - active_loop: shirt_size_form
-  - slot_was_set:
-    - requested_slot: shirt_size
-  - intent: give_shirt_size
-    entities:
-    - shirt_size: medium
-  - slot_was_set:
-    - shirt_size: medium
-  - action: shirt_size_form
-  - slot_was_set:
-    - requested_slot: null
-  - active_loop: null
-  - action: utter_remember
-  - action: action_say_shirt_size
-
-# - story: happy path
-#   steps:
-#   - intent: greet
-#   - action: utter_greet
-#   - intent: mood_great
-#   - action: utter_happy
-
-# - story: sad path 1
-#   steps:
-#   - intent: greet
-#   - action: utter_greet
-#   - intent: mood_unhappy
-#   - action: utter_cheer_up
-#   - action: utter_did_that_help
-#   - intent: affirm
-#   - action: utter_happy
-
-# - story: sad path 2
-#   steps:
-#   - intent: greet
-#   - action: utter_greet
-#   - intent: mood_unhappy
-#   - action: utter_cheer_up
-#   - action: utter_did_that_help
-#   - intent: deny
-#   - action: utter_goodbye
-
-# - story: path about time
-#   steps:
-#   - intent: greet
-#   - action: utter_greet
-#   - intent: give_time
-#   - action: action_show_time
+  - story: interactive_story_1
+    steps:
+      - intent: ask_me_anything
+      - action: shirt_size_form
+      - active_loop: shirt_size_form
+      - slot_was_set:
+          - requested_slot: shirt_size
+      - intent: give_shirt_size
+        entities:
+          - shirt_size: medium
+      - slot_was_set:
+          - shirt_size: medium
+      - action: shirt_size_form
+      - slot_was_set:
+          - requested_slot: null
+      - active_loop: null
+      - action: utter_remember
+      - action: action_say_shirt_size
+  - story: interactive_story_1
+    steps:
+      - intent: ask_id
+      - action: action_tell_id
+      - intent: EXTERNAL_dry_plant
+        entities:
+          - plant: Orchid
+      - slot_was_set:
+          - plant: Orchid
+      - action: action_warn_dry
