--- a/domain.yml
+++ b/domain.yml
@@ -1,56 +1,83 @@
 version: '3.1'
 intents:
-  - affirm
-  - ask_me_anything
-  - bot_challenge
-  - deny
-  - give_shirt_size
-  - give_time
-  - goodbye
-  - greet
-  - mood_great
-  - mood_unhappy
-  - repeat_shirt_size
+- EXTERNAL_dry_plant
+- EXTERNAL_reminder
+- EXT_reminder
+- affirm
+- ask_forget_reminders
+- ask_id
+- ask_me_anything
+- ask_remind_call
+- bot_challenge
+- deny
+- give_shirt_size
+- give_time
+- goodbye
+- greet
+- mood_great
+- mood_unhappy
+- repeat_shirt_size
 entities:
-  - shirt_size
+- plant
+- shirt_size
+- PERSON
 slots:
   shirt_size:
     type: text
     influence_conversation: true
     mappings:
-      - type: from_entity
-        entity: shirt_size
-        conditions:
-          - active_loop: shirt_size_form
+    - type: from_entity
+      entity: shirt_size
+      conditions:
+      - active_loop: shirt_size_form
+  plant:
+    type: text
+    influence_conversation: false
+    mappings:
+    - type: from_entity
+      entity: plant
+  PERSON:
+    type: text
+    influence_conversation: false
+    mappings:
+    - type: from_entity
+      entity: PERSON
 forms:
   shirt_size_form:
     required_slots:
-      - shirt_size
+    - shirt_size
 actions:
-  - action_say_shirt_size
-  - utter_remember
-  - utter_greet
-  - action_default_fallback
+- action_warn_dry
+- action_tell_id
+- action_say_shirt_size
+- utter_remember
+- utter_greet
+- action_default_fallback
+- action_set_reminder
+- action_forget_reminders
+- action_react_to_reminder
 responses:
   utter_greet:
-    - text: Hey! How are you?
+  - text: Hey! How are you?
   utter_cheer_up:
-    - text: 'Here is something to cheer you up:'
-      image: https://i.imgur.com/nGF1K8f.jpg
+  - text: 'Here is something to cheer you up:'
+    image: https://i.imgur.com/nGF1K8f.jpg
   utter_did_that_help:
-    - text: Did that help you?
+  - text: Did that help you?
   utter_happy:
-    - text: Great, carry on!
+  - text: Great, carry on!
   utter_goodbye:
-    - text: Bye
+  - text: Bye
   utter_iamabot:
-    - text: I am a bot, powered by Rasa.
+  - text: I am a bot, powered by Rasa.
   utter_ask_shirt_size:
-    - text: do u know ur shirt size?
+  - text: do u know ur shirt size?
   utter_remember:
-    - text: terimah kasih. I'll remember ur size.
+  - text: terimah kasih. I'll remember ur size.
   utter_message:
-    - text: '{message}'
+  - text: '{message}'
+  utter_warn_dry:
+  - text: Your {plant} needs some water!
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
