--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,9 +1,15 @@
 version: '3.1'
 
 rules:
-  - rule: remind call
+  # - rule: remind call
+  #   steps:
+  #     - intent: ask_remind_call
+  #     - action: action_set_reminder
+  - rule: Schedule a reminder
     steps:
       - intent: ask_remind_call
+        entities:
+          - PERSON
       - action: action_set_reminder
   - rule: forget reminder
     steps:
