--- a/data/rules.yml
+++ b/data/rules.yml
@@ -8,7 +8,7 @@ rules:
   - rule: respond to FAQs
     steps:
       - intent: faq
-      - action: action_default_fallback
+      - action: utter_gpt
   - rule: Schedule a reminder
     steps:
       - intent: ask_remind_call
