--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -170,3 +170,9 @@ nlu:
     - can you teach 1 to 1?
     - do you offer 1 to 1 classes?
     - can u do 1on1
+- intent: out_of_scope
+  examples: |
+    - I want to order food
+    - What is 2 + 2?
+    - Who's the US President?
+    - i want to order food
