--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,10 +1,10 @@
 version: '3.1'
 
 rules:
-  # - rule: remind call
-  #   steps:
-  #     - intent: ask_remind_call
-  #     - action: action_set_reminder
+  - rule: out-of-scope
+    steps:
+      - intent: out_of_scope
+      - action: utter_out_of_scope
   - rule: respond to FAQs
     steps:
       - intent: faq
