--- a/data/rules.yml
+++ b/data/rules.yml
@@ -74,4 +74,4 @@ rules:
       - active_loop: null
       - slot_was_set:
           - requested_slot: null
-      - action: utter_send_schedule
+      - action: utter_trial_scheduled
