--- a/data/stories.yml
+++ b/data/stories.yml
@@ -66,18 +66,22 @@ stories:
     steps:
     - intent: out_of_scope
     - action: utter_out_of_scope
-  - story: interactive_story_1
+  - story: full trial sign up form flow
     steps:
     - intent: trial_sign_up
     - action: trial_sign_up_form
     - active_loop: trial_sign_up_form
     - slot_was_set:
       - requested_slot: full_name
+    - action: trial_sign_up_form
+    - active_loop: trial_sign_up_form
+    - slot_was_set:
+      - requested_slot: full_name
     - intent: give_full_name
       entities:
-      - full_name: brandon ong
+      - full_name: brandon
     - slot_was_set:
-      - full_name: brandon ong
+      - full_name: brandon
     - action: trial_sign_up_form
     - slot_was_set:
       - requested_slot: grade_level
@@ -96,6 +100,14 @@ stories:
       - subject: math
     - action: trial_sign_up_form
     - slot_was_set:
+      - requested_slot: trial_time_slot
+    - intent: give_trial_time_slot
+      entities:
+      - trial_time_slot: 25 Sep 230PM
+    - slot_was_set:
+      - trial_time_slot: 25 Sep 230PM
+    - action: trial_sign_up_form
+    - slot_was_set:
       - requested_slot: null
     - active_loop: null
-    - action: utter_send_schedule
+    - action: utter_trial_scheduled
