--- a/domain.yml
+++ b/domain.yml
@@ -16,8 +16,12 @@ intents:
     - plant
     - shirt_size
     is_retrieval_intent: true
+- give_full_name
+- give_grade_level
 - give_shirt_size
+- give_subject
 - give_time
+- give_trial_time_slot
 - goodbye
 - greet
 - mood_great
@@ -25,15 +29,13 @@ intents:
 - out_of_scope
 - repeat_shirt_size
 - trial_sign_up
-- give_full_name
-- give_grade_level
-- give_subject
 entities:
+- full_name
+- grade_level
+- trial_time_slot
+- subject
 - plant
 - shirt_size
-- grade_level
-- full_name
-- subject
 - PERSON
 slots:
   full_name:
@@ -51,6 +53,11 @@ slots:
     mappings:
     - type: from_entity
       entity: subject
+  trial_time_slot:
+    type: text
+    mappings:
+    - type: from_entity
+      entity: trial_time_slot
   shirt_size:
     type: text
     influence_conversation: true
@@ -76,13 +83,15 @@ forms:
     required_slots:
     - shirt_size
   trial_sign_up_form:
-    ignored_intents: 
-      - chitchat
+    ignored_intents:
+    - chitchat
     required_slots:
     - full_name
     - grade_level
     - subject
+    - trial_time_slot
 actions:
+- utter_trial_scheduled
 - utter_out_of_scope
 - utter_gpt
 - utter_welcome
@@ -102,14 +111,16 @@ actions:
 - utter_send_schedule
 responses:
   utter_ask_trial_sign_up_form_full_name:
-  - text: "what's ur full name?"
+  - text: what's ur full name?
   utter_ask_trial_sign_up_form_grade_level:
-  - text: "what's ur child's grade level?"
+  - text: what's ur child's grade level?
   utter_ask_trial_sign_up_form_subject:
-  - text: "what's subject would you like to try?"
-  utter_send_schedule:
+  - text: what's subject would you like to try?
+  utter_ask_trial_sign_up_form_trial_time_slot:
   - text: 'thanks for providing your details! now select which time slot you want! here is the schedule for grade 5 math:'
     image: https://i.imgur.com/1938Z2y.jpg
+  utter_trial_scheduled:
+  - text: thanks for signing up! we will send you a reminder on {trial_time_slot}!
   utter_out_of_scope:
   - text: Sorry, I can't handle that request. Can you try rephrasing your question?
   utter_gpt:
